--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@clerk/backend": "^1.33.1",
     "@clerk/localizations": "^3.26.3",
     "@clerk/nextjs": "^6.34.1",
-    "@googlemaps/markerclusterer": "^2.6.2",
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -27,7 +26,6 @@
     "lucide-react": "^0.511.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
-    "proj4": "^2.19.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
@@ -39,9 +37,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/google.maps": "^3.58.1",
+    "@types/navermaps": "^3.9.1",
     "@types/node": "^20",
-    "@types/proj4": "^2.19.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
